[package]
name = "task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "uuid"]

[dependencies.sqlx]
version = "0.6.2"
features = [
    "uuid",
    "migrate",
    "json",
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
]

[dependencies.thiserror]
version = "1.0.35"

[dependencies.chrono]
version = "0.4.22"
features = ["serde"]

[dependencies.strum_macros]
version = "0.24.3"

[dependencies.uuid]
version = "1.1.2"
features = ["serde", "v4"]